<resources>
    <string name="app_name">ClimbStation</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="qr_code_scan_msg">Scan the QR code located on the wall</string>
    <string name="skip">Enter code manually</string>
    <string name="speed">%d m / min</string>
    <string name="consumed_calories">%.2f kcal</string>
    <string name="length_text_field_label">Length (in meter)</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="setting">Settings</string>
    <string name="phase">Phase %d</string>
    <plurals name="phase_amount">
        <item quantity="one">%d phase</item>
        <item quantity="other">%d phases</item>
    </plurals>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="general_setting">General Settings</string>
    <string name="owner_setting">Owner\'s Settings</string>

    <string-array name="filter_modes">
        <item>All</item>
        <item>Custom terrain profiles</item>
        <item>Basic programs</item>
    </string-array>

    <string-array name="length">
        <item>millimeters(mm)</item>
        <item>centimeters(cm)</item>
        <item>meters(m)</item>
        <item>feet(ft)</item>
    </string-array>

    <string-array name="calorie">
        <item>calories</item>
        <item>kcal</item>
        <item>kJ</item>

    </string-array>

    <string name="scale">Scales</string>
    <string name="calorie">Unit to measure Calories</string>

    <!--    &lt;!&ndash; Sync Preferences &ndash;&gt;-->
    <string name="sound_info">Sound Information</string>
    <string name="position">Start at same position</string>
    <!--    <string name="attachment_summary_on">Automatically download attachments for incoming emails-->
    <!--    </string>-->
    <!--    <string name="attachment_summary_off">Only download attachments when manually requested</string>-->
    <string name="Settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="calibration">Calibration</string>
    <string name="network">Network</string>
    <string name="security">Security</string>
    <string name="owner_settings">Owner\'s Setting</string>
    <string name="stats">Statistics</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_climbed_meters_form_meters_goal">You climbed meters form meters goal.</string>
    <string name="statistics">Statistics</string>
    <string name="climbing_duration">Climbing Duration</string>
    <string name="climbed_date">Climbed Date</string>
    <string name="difficulty">Difficulty</string>
    <string name="climbed_length">Climbed Length</string>
    <string name="average_speed">Average Speed</string>
    <string name="calories_consumed">Calories Consumed</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="degree">%d°</string>
    <string name="degree_symbol">°</string>
    <string name="results_message">You climbed %d meters from %d meters goal!</string>
    <string name="distance">%d m</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="units">Units</string>-->
    <string name="length">Unit to measure length of climb</string>
    <string name="owners_name">Owner\'s Name</string>
    <string name="log_in_to_access">Log In to access</string>

    <string name="climbing_history">List of Climbing history</string>
    <string name="climb">Climb</string>
    <string name="title_activity_owners_setting">OwnersSetting</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>
    <string name="angle_set_up">Angle Set-up</string>
    <string name="speed_set_up">Speed Set-up</string>

    <string name="climbed_speed">Climbed speed</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="_00_00_00">00:00:00</string>

    <string name="level">%s level</string>
    <string name="manage_custom_terrain_profile">Manage custom terrain profile</string>
    <string name="set_body_weight">Set body weight</string>
</resources>