<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="Account"
            app:title="@string/profile" />


        <EditTextPreference
            app:key="pwd"
            app:title="@string/change_password" />


    </PreferenceCategory>

    <PreferenceCategory>

        <EditTextPreference
            app:key="calibrate"
            app:title="@string/calibration" />


        <EditTextPreference
            app:key="network"
            app:title="@string/network" />

        <EditTextPreference
            app:key="security"
            app:title="@string/security" />


        <SwitchPreferenceCompat
            app:key="sound"
            app:title="@string/sound_info" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:title="@string/position" />

        <EditTextPreference
            app:key="owner_setting"
            app:title="@string/owner_settings" />


    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>