<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/statistics"
        android:textColor="#D7CCC8"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/half_rounded_corner_container"
        android:elevation="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title"
        app:layout_constraintVertical_bias="0.0">


        <ProgressBar
            android:id="@+id/statusBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/you_climbed_meters_form_meters_goal"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratulations"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/congratulations"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/congratulations"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusBar" />

        <TextView
            android:id="@+id/climb_details"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:gravity="start|top"
            android:hint="@string/statistics"
            android:inputType="textMultiLine"
            android:text="@string/you_climbed_meters_form_meters_goal"
            android:textColor="#B71C1C"
            android:textColorHighlight="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratulations" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#BAFFFFFF"
            android:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/climb_details">


            <TextView
                android:id="@+id/stat_climb_duration"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/climbing_duration"
                android:textSize="18sp"

                />

            <TextView
                android:id="@+id/stat_difficulty"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="38dp"
                android:layout_marginRight="8dp"
                android:text="@string/difficulty"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stat_climb_length"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="68dp"
                android:layout_marginRight="8dp"
                android:text="@string/climbed_length"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stat_avg_speed"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="98dp"
                android:layout_marginRight="8dp"
                android:text="@string/average_speed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stat_estm_cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="128dp"
                android:layout_marginRight="8dp"
                android:text="@string/calories_consumed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stat_climb_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="158dp"
                android:layout_marginRight="8dp"
                android:text="@string/climbed_date"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>